# spring/src/main/java/com/github/lambda/playground/exception/GlobalExceptionHandler.java
@@ -1,0 +1,4 @@
+package com.github.lambda.playground.exception;
+
+public class GlobalExceptionHandler {
+}
